css/style.css
/* ===[ Global styling ]=== */

body {
    background-color: linen;
    color: #330000;
    font-family: 'Public Sans', sans-serif;
    margin: 0;
}

h1, h2, h3 {
    font-family: 'Bungee Shade', cursive;
    text-align: center;
}

h1 { color: darkorchid; }

h2 { color: darkslateblue; }

@media screen and (min-width: 601px) {
  h1 { font-size: 48pt; }
  h2 { font-size: 32pt; }
  h3 { font-size: 24pt; }
}

@media screen and (max-width: 600px) {
  h1 { font-size: 14vw; }
  h2 { font-size: 10vw; }
  h3 { font-size: 7vw; }
}



/* ===[ Site navigation styling ]=== */

nav {
  font-family: 'Montserrat', sans-serif;
  font-size: 12pt;
  text-align: center;
}

nav .active {
    background-color: cornflowerblue;
}

nav ul {
    background-color: darkorchid;
    list-style-type: none;
    margin: -10px -9px 0;
    margin-top: 0;
    overflow: hidden;
}

nav li {
    float: left;
}

nav li a {
    background-color: darkorchid;
    color: linen;
    display: block;
    padding: 16px 24px;
    text-decoration: none;
}

nav li a:hover {
    background-color: royalblue;
    text-decoration: underline;
    text-decoration-color: skyblue;
    text-decoration-style: dotted;
}



/* ===[ Main body styling ]=== */

main .section {
  padding: 2% 15%;
}

main .section img {
  display: block;
  margin: 0 auto;
  width: auto;
}

main .project {
  padding: 1% 0;
}

main .rounded-profile img {
  border-radius: 50%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: auto;
}

@media screen and (min-width: 601px) {
  main .rounded-profile img { max-width: 250px; }
  main .section img { max-height: 5vw; }
}

@media screen and (max-width: 600px) {
  main .rounded-profile img { max-width: 140px; }
  main .section img { max-height: 20vw; }
}



/* ===[ Footer styling ]=== */

footer {
    font-family: 'Public Sans', sans-serif;
    font-size: 10pt;
    text-align: center;
}

footer ul {
    list-style-type: none;
    overflow: hidden;
}

footer ul li, footer ul li a, #year {
    background-color: darkorchid;
    color: linen;
    text-decoration: none;
    text-decoration-style: dotted;
}

footer ul li a:hover {
    color: skyblue;
    text-decoration: underline;
    text-decoration-color: skyblue;
    text-decoration-style: dashed;
}

